[project]
name = "jenkins-mcp-server"
version = "0.1.0"
description = "A jenkins MCP server to get job console output"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
keywords = ["mcp", "jenkins", "console"]
license = { text = "MIT" }
dependencies = [
    "fastmcp",
    "python-dotenv",
    "httpx",
]

[project.scripts]
jenkins-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
include = ["."]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.378",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.9",
]
